/*
 * Copyright (c) 2022, Oracle and/or its affiliates. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

/*
 * Protos for serializing Tribuo Common SGD classes.
 */
package tribuo.common.sgd;

option java_multiple_files = true;
option java_package = "org.tribuo.common.sgd.protos";

// Import Tribuo's math interface protos
import "tribuo-math.proto";

/*
FMParameters proto
 */
message FMParametersProto {
  int32 numFactors = 1;
  repeated tribuo.math.TensorProto weights = 2;
}
